# sede-foundations

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml  reproduce.py  requirements.txt
figures/: make_foundations_figures.py  make_foundations_vector.py
paper/: SEDE_foundations.md  build_scipost.sh  refs_foundations.bib
paper/tex/: SEDE_foundations.tex
paper/tools/: mdmath.py  template_scipost.tex
src/experiments/: run_algebra_type.py  run_alpha_eff.py  run_bh_new_physics.py  run_birth_bifurcation.py  run_causal_set.py  run_chr_amplitude.py  run_chr_experiments.py  run_chr_soc.py  run_closure_attempts.py  run_combined_qg_tests.py  run_deposition_drive.py  run_deriv_A_dsholo.py  run_deriv_B_thermal.py  run_deriv_C_verlinde.py  run_deriv_D_nonadd.py  run_deriv_E_nogo.py  run_dns_roughening.py  run_driven_ness.py  run_ds_count.py  run_ds_marginal.py  run_ds_resolve.py  run_entropy_bounds.py  run_gr_height.py  run_gravitational_coupling.py  run_kpz_membrane.py  run_kz_sweep.py  run_lit_inferences.py  run_mf_exactness.py  run_neff_gate.py  run_no_ceiling.py  run_pbh_driving.py  run_qg_experiments.py  run_qg_route1_ckn.py  run_qg_route2_driving.py  run_qg_route3_roughening.py  run_qg_route4_ckn_saturation.py  run_residual_resolution.py  run_residue_longrange.py  run_rtn_ising.py  run_soc_attractor.py  (+6 more)
src/scripts/: make_paper_figures.py  verify_refs.py
src/sede/: __init__.py  _paths.py  barrow_bh.py  camb_background.py  causal_set.py  chr_mechanism.py  cmb.py  data_loader.py  entropy_bounds.py  friedmann.py  gamma_computation.py  halo_entropy.py  (+12 more)
