[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sede"
version = "1.0.0"
description = "Structural Entropy Dark Energy (SEDE) — reproduction code for the foundations paper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Stilian Pandev" }]
dependencies = [
    # numpy<2.3: NumPy 2.3's strict float(array) breaks camb 1.6.6's set_cosmology.
    # (The trapz/trapezoid rename is handled by an in-code getattr shim.)
    "numpy<2.3",
    "scipy<1.14",
    "matplotlib",
    "astropy",
    "camb",
    "emcee",
    "corner",
    "colossus",
]

[project.optional-dependencies]
# Heavier / opt-in stages (see requirements.txt for which scripts use each)
full = ["classy", "cobaya", "dynesty"]

[tool.setuptools]
packages = ["sede"]
package-dir = { "" = "src" }
# reproduce.py is a root-level runnable entrypoint (python reproduce.py), not an installed module.
